User Story: None.  Incidental tweak to fix alignment of my studies menu. Reviewed by: TJ Andrews.
Prior to login and post login, the my studies menu was wrapping incorrectly

--- a/caintegrator2-war/web/common/css/caintegrator2.css
+++ b/caintegrator2-war/web/common/css/caintegrator2.css
@@ -90,7 +90,7 @@ LEGEND INPUT, LEGEND SELECT
 #nihtag
 { float:right; width:295px; height:37px; }
 #appheader
-{ background:#475b82 url("../../images/bg_appheader.gif") repeat-x bottom; border-top:1px solid #6f86b0; height:55px; min-width:770px; padding:0 0 5px 0;  }
+{ background:#475b82 url("../../images/bg_appheader.gif") repeat-x bottom; border-top:1px solid #6f86b0; height:53px; min-width:770px; padding:0 0 5px 0;  }
 #mainlogo
 { padding:10px 0 0 10px; float:left; width:450px; }
 #versioninfo
@@ -101,13 +101,13 @@ LEGEND INPUT, LEGEND SELECT
     float:left;
     padding:4px 0 0 10px; }
 #userarea_wrapper
-{ background:#475b82 url("../../images/bg_user.jpg") no-repeat left 0; height:30px; width:48em; margin-top:10px; padding:8px 0 0 12px; position:absolute; top: 35px; right: 0px; color:#bfd5d5; font-size:92%; font-weight:bold; }
+{ background:#475b82 url("../../images/bg_user.jpg") no-repeat left 0; height:30px; width:50em; margin-top:10px; padding:8px 0 0 12px; position:absolute; top: 35px; right: 0px; color:#bfd5d5; font-size:92%; font-weight:bold; }
 #user
 { float:left; width:20em; margin-top:-5px; padding:8px 0 0 12px; float:right; color:#bfd5d5; font-weight:bold; }
 #user A
 { text-decoration:underline; color:#fff; font-weight:normal; padding:0 3px }
 #mystudies
-{ float:left; width:26em }
+{ float:left; width:28em }
 #mystudies LABEL
 { color:#bfd5d5 }
 #mystudies SELECT
